Fix text wrapping on quitpanel buttons.

--- a/htdocs/css/ui.quitpanel.css
+++ b/htdocs/css/ui.quitpanel.css
@@ -6,6 +6,7 @@
 
 .ui-quitpanel .ui-quitpanel-button {
 	width: 40%;
+	white-space: nowrap;
 }
 
 .ui-quitpanel .panel {
